infra/traefik/traefik/networkpolicies/traefik.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: traefik
      app.kubernetes.io/name: traefik
  ingress:
    - fromCIDR:
        - ${LAN_NETWORK_RANGE}
      toPorts:
        - ports:
            - port: "2222"
              protocol: ANY
            - port: "8000"
              protocol: ANY
            - port: "8443"
              protocol: ANY
    - fromCIDR:
        - 173.245.48.0/20
        - 103.21.244.0/22
        - 103.22.200.0/22
        - 103.31.4.0/22
        - 141.101.64.0/18
        - 108.162.192.0/18
        - 190.93.240.0/20
        - 188.114.96.0/20
        - 197.234.240.0/22
        - 198.41.128.0/17
        - 162.158.0.0/15
        - 104.16.0.0/13
        - 104.24.0.0/14
        - 172.64.0.0/13
        - 131.0.72.0/22
      toPorts:
        - ports:
            - port: "8443"
    - fromEntities:
        - cluster
